--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,11 @@
                     <label for="search-phones">Search:</label>
                     <input class="form-control" type="text" data-control="search" id="search-phones">
                     <label for="search-phones">Sorting:</label>
-                    <select class="form-control" type="text" data-control="search" id="sort-phones"></select>
+                    <select class="form-control" name="sort-phones" id="sort-phones">
+                        <option value="age">age</option>
+                        <option value="sort-A-Z">name a-z</option>
+                        <option value="sort-Z-A">name z-a</option>
+                    </select>
                 </div>
             </div>
 
@@ -37,7 +41,7 @@
             <img class="card-img img-responsive" src="<%=imageUrl%>" alt="">
         </div>
         <div class="col-md-10">
-            <a href="/#!/<%=id%>"><%=name%></a>
+            <a href="/#phones/<%=id%>"><%=name%></a>
             <p><%=snippet%></p>
         </div>
     </li>
