--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
                     <input class="form-control" type="text" data-control="search" id="search-phones">
                     <label for="search-phones">Sorting:</label>
                     <select class="form-control" name="sort-phones" id="sort-phones">
+                        <option value="no sorting">no sorting</option>
                         <option value="age">age</option>
                         <option value="sort-A-Z">name a-z</option>
                         <option value="sort-Z-A">name z-a</option>
