--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,7 @@
             <img class="card-img img-responsive" src="<%=imageUrl%>" alt="">
         </div>
         <div class="col-md-10">
-            <a href="<%window.location%>/#phones/<%=id%>"><%=name%></a>
+            <a href="/#phones/<%=id%>"><%=name%></a>
             <p><%=snippet%></p>
         </div>
     </li>
